# spacetime

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
crates/spacetime-async-core/: Cargo.toml  README.md
crates/spacetime-async-core/examples/: tokio_spawner.rs  yield_coop.rs
crates/spacetime-async-core/src/: lib.rs  storage.rs
crates/spacetime-async-core/tests/: smoke.rs
crates/spacetime-capabilities/: Cargo.toml  README.md
crates/spacetime-capabilities/src/: lib.rs
crates/spacetime-capabilities/tests/: smoke.rs
crates/spacetime-core/: Cargo.toml  README.md
crates/spacetime-core/examples/: simple_module.rs
crates/spacetime-core/src/: lib.rs  tests.rs  testutil.rs
crates/spacetime-core/tests/: smoke.rs
crates/spacetime-crypto/: Cargo.toml  README.md
crates/spacetime-crypto/src/: lib.rs
crates/spacetime-crypto/tests/: smoke.rs
crates/spacetime-health/: Cargo.toml  README.md
crates/spacetime-health/src/: lib.rs  macros.rs
crates/spacetime-health/tests/: smoke.rs
crates/spacetime-io/: Cargo.toml  README.md
crates/spacetime-io/examples/: std_stdout.rs
crates/spacetime-io/src/: lib.rs  testutil.rs
crates/spacetime-io/tests/: smoke.rs
crates/spacetime-ipc/: Cargo.toml  README.md
crates/spacetime-ipc/src/: lib.rs
crates/spacetime-logging/: Cargo.toml  README.md
crates/spacetime-logging/examples/: custom_logger.rs  simple.rs  std_tracing.rs
crates/spacetime-logging/src/: lib.rs
crates/spacetime-logging/tests/: smoke.rs
crates/spacetime-macros/: Cargo.toml  README.md
crates/spacetime-macros/src/: lib.rs
crates/spacetime-macros/tests/: basic.rs
crates/spacetime-module/: Cargo.toml  README.md
crates/spacetime-module/examples/: derived_nodes.rs  graph_order.rs  order_iter.rs  order_print.rs
crates/spacetime-module/src/: graph.rs  lib.rs  macros.rs  runner.rs  testutil.rs  types.rs
crates/spacetime-module/tests/: edge_cases.rs  smoke.rs
crates/spacetime-std-runtime/: Cargo.toml  README.md
crates/spacetime-std-runtime/examples/: two_modules.rs
crates/spacetime-std-runtime/src/: lib.rs
crates/spacetime-std-runtime/tests/: smoke.rs
crates/spacetime-storage/: Cargo.toml  README.md
crates/spacetime-storage/examples/: memstore_basic.rs  prefix_scan.rs
crates/spacetime-storage/src/: alloc_helpers.rs  lib.rs  namespaced.rs  std_impl.rs  tests.rs
crates/spacetime-storage/tests/: namespaced.rs  smoke.rs
docs/: README.md  arch-spacetime.md  guide-dev.md  guide-release.md  ref-project-conventions.md
docs/templates/: AGENTS.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  publish.sh  release.just  topo-order.py
spacetime/crates/spacetime-async-core/tests/: smoke.rs
spacetime/crates/spacetime-platform-std/tests/: smoke.rs
