[package]
name = "spacetime-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spacetime core: no_std-first traits and types for modules and runtimes"
repository.workspace = true

[features]
default = [] # no_std by default
alloc = []
std = ["alloc"]

[dependencies]
