[package]
name = "spacetime-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spacetime crypto facades: no_std-first RNG/entropy traits"
repository.workspace = true

[features]
default = [] # no_std by default
alloc = []
std = ["alloc"]

[dependencies]
