[package]
name = "spacetime-logging"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spacetime logging facade: no_std-friendly logging levels, event API, and lightweight macros"
repository.workspace = true

[features]
default = [] # no_std by default
alloc = []
# Enable std support and the optional tracing bridge when std is on.
std = ["alloc", "dep:tracing"]

[dependencies]
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
